[package]
name = "h2-ping"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.64"
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.24"
h2 = "0.3.14"
http = "0.2.8"
humantime = "2.1.0"
pin-project-lite = "0.2.9"
rustls = "0.20.6"
tokio = { version = "1.21.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "time"]}
tokio-rustls = "0.23.4"
tokio-util = "0.7.4"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webpki-roots = "0.22.4"

[profile.mini]
inherits = "release"
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
